Is there anything to commit

--- a/formal/title.tex
+++ b/formal/title.tex
@@ -5,8 +5,9 @@
 
 % Title
 \HRule \\[0.4cm]
-{ \huge \bfseries Generating Safe Paths in Dynamic Environments By Actively
-Predicting the Motion of Obstacles\\[0.4cm] }
+{ \huge \bfseries Generating Safe Paths in Dynamic Environments By Extracting
+Minimum Cost Trajectories Using Obstacle Position Probability Distributions and
+Replanning\\[0.4cm] }
 
 \HRule \\[3cm]
 
