it is coming along

--- a/thesis.tex
+++ b/thesis.tex
@@ -108,6 +108,8 @@
 %
 % \subfile{chapters/implementation}
 % 
+\subfile{chapters/experimentalsetup}
+
 % \subfile{chapters/results}
 % 
 \subfile{chapters/discussion}
