--- a/thesis.tex
+++ b/thesis.tex
@@ -55,7 +55,9 @@
 \newcommand{\False}{\Constant{false}}
 \newcommand{\True}{\Constant{true}}
 \newcommand{\Null}{\Constant{null}}
-\newcommand{\Name}{\Acronym{dCRoPS}}
+
+\newcommand{\Name}{\Acronym{Dodger}}
+
 \newcommand{\Revision}[1]{\textcolor{red}{#1}}
 \newcommand{\R}{\ensuremath{\mathbb{R}}}
 \newcommand{\Traj}{\ensuremath{\zeta}}
