--- a/thesis.tex
+++ b/thesis.tex
@@ -64,6 +64,10 @@
 \newcommand{\Tree}{\Symbol{T}}
 \newcommand{\pair}[1]{\ensuremath{\langle#1\rangle}}
 
+\newcommand{\argmin}[1]{\underset{#1}{\operatorname{arg}\,\operatorname{min}}\;}
+\newcommand{\argmax}[1]{\underset{#1}{\operatorname{arg}\,\operatorname{max}}\;}
+
+
 \newcommand{\mychange}[1]{\textcolor{red}{#1}}
 
 \pagestyle{fancy}
@@ -96,7 +100,7 @@
 
 % \subfile{chapters/introduction}
 % 
-% \subfile{chapters/objectives}
+\subfile{chapters/objectives}
 % 
 % \subfile{chapters/ethics}
 % 
@@ -112,7 +116,7 @@
 % 
 \subfile{chapters/experimentalsetup}
 
-% \subfile{chapters/results}
+\subfile{chapters/results}
 % 
 \subfile{chapters/discussion}
 % 
