Add all sections

--- a/formal/title.tex
+++ b/formal/title.tex
@@ -5,9 +5,8 @@
 
 % Title
 \HRule \\[0.4cm]
-{ \huge \bfseries Generating Safe Paths in Dynamic Environments By Extracting
-Minimum Cost Trajectories Using Obstacle Position Probability Distributions and
-Replanning\\[0.4cm] }
+{\huge \bfseries Generating Safe Trajectories in Stochastic Dynamic Enviroments
+\\[0.4cm] }
 
 \HRule \\[3cm]
 
