--- a/thesis.tex
+++ b/thesis.tex
@@ -98,29 +98,29 @@
 
 \tableofcontents
 
-% \subfile{chapters/introduction}
-% 
+\subfile{chapters/introduction}
+
+\subfile{chapters/contextsurvey}
+
+\subfile{chapters/ethics}
+
+\subfile{chapters/software}
+
 \subfile{chapters/objectives}
-% 
-% \subfile{chapters/ethics}
-% 
-% \subfile{chapters/context-survey}
-% 
-% \subfile{chapters/requirements}
-% 
-% \subfile{chapters/methodology}
-% 
+
+\subfile{chapters/plannermethodology}
+
 \subfile{chapters/design}
-%
-% \subfile{chapters/implementation}
-% 
+
+\subfile{chapters/implementation}
+
 \subfile{chapters/experimentalsetup}
 
 \subfile{chapters/results}
-% 
+
 \subfile{chapters/discussion}
-% 
-% \subfile{chapters/acknowledgements}
+
+\subfile{chapters/acknowledgements}
 
 \bibliographystyle{IEEEtran}
 
