--- a/thesis.tex
+++ b/thesis.tex
@@ -39,6 +39,8 @@
 
 \usepackage{fancyhdr}
 
+\usepackage{amsthm}
+
 \renewcommand{\algorithmicrequire}{\textbf{Input:}}
 \renewcommand{\algorithmicensure}{\textbf{Output:}}
 
@@ -97,6 +99,8 @@
 \pagebreak
 
 \tableofcontents
+
+\listoffigures
 
 \subfile{chapters/introduction}
 
