--- a/thesis.bib
+++ b/thesis.bib
@@ -18,3 +18,96 @@
     title = {Optimum Branching},
     journal = {Journal OF Research of the National Bureau of Standards}
 }
+
+@article{prim,
+    author = {Prim, R. C.},
+    title = {Shortest connection networks and some generalizations},
+    journal = {Bell System Technical Journal},
+    volume = {36},
+    year = {1957},
+    pages = {1389–1401}
+}
+
+@article{kruskal,
+    author = {Kruskal, J. B.},
+    year = {1956},
+    title = {On the shortest spanning subtree of a graph and the traveling salesman problem},
+    journal = {Proceedings of the American Mathematical Society},
+    volume = {7},
+    pages = {48–50}
+}
+
+@article{dijkstra,
+    year={1959},
+    journal={Numerische Mathematik},
+    volume={1},
+    number={1},
+    title={A note on two problems in connexion with graphs},
+    author={Dijkstra, E.W.},
+    pages={269-271}
+}
+
+@ARTICLE{astar,
+    author={Hart, P.E. and Nilsson, N.J. and Raphael, B.},
+    journal={Systems Science and Cybernetics, IEEE Transactions on},
+    title={A Formal Basis for the Heuristic Determination of Minimum Cost Paths},
+    year={1968},
+    month={July},
+    volume={4},
+    number={2},
+    pages={100-107}
+}
+
+@article{rrt,
+    title={Rapidly-Exploring Random Trees A Цew Tool for Path Planning},
+    author={LaValle, Steven M},
+    year={1998}
+}
+
+@inproceedings{est,
+  title={Guided expansive spaces trees: A search strategy for motion-and cost-constrained state spaces},
+  author={Phillips, Jeff M and Bedrossian, Nazareth and Kavraki, EE},
+  booktitle={Robotics and Automation, 2004. Proceedings. ICRA'04. 2004 IEEE International Conference on},
+  volume={4},
+  pages={3968--3973},
+  year={2004},
+  organization={IEEE}
+}
+
+@article{bestfs,
+  title={Linear-space best-first search},
+  author={Korf, Richard E},
+  journal={Artificial Intelligence},
+  volume={62},
+  number={1},
+  pages={41--78},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@inproceedings{pf,
+  title={Potential field methods and their inherent limitations for mobile robot navigation},
+  author={Koren, Yoram and Borenstein, Johann},
+  booktitle={Robotics and Automation, 1991. Proceedings., 1991 IEEE International Conference on},
+  pages={1398--1404},
+  year={1991},
+  organization={IEEE}
+}
+
+@incollection{wallar_taros_2013,
+  title={Path planning for swarms by combining probabilistic roadmaps and potential fields},
+  author={Wallar, Alex and Plaku, Erion},
+  booktitle={Towards Autonomous Robotic Systems},
+  pages={417--428},
+  year={2014},
+  publisher={Springer}
+}
+
+@inproceedings{wallar_ssci_2014_boids,
+  title={Path planning for swarms in dynamic environments by combining probabilistic roadmaps and potential fields},
+  author={Wallar, Alex and Plaku, Erion},
+  booktitle={Swarm Intelligence (SIS), 2014 IEEE Symposium on},
+  pages={1--8},
+  year={2014},
+  organization={IEEE}
+}
