--- a/thesis.tex
+++ b/thesis.tex
@@ -106,15 +106,13 @@
 
 \subfile{chapters/contextsurvey}
 
-\subfile{chapters/ethics}
-
 \subfile{chapters/software}
 
 \subfile{chapters/objectives}
 
-\subfile{chapters/plannermethodology}
-
 \subfile{chapters/design}
+
+\subfile{chapters/methodology}
 
 \subfile{chapters/implementation}
 
@@ -123,6 +121,8 @@
 \subfile{chapters/results}
 
 \subfile{chapters/discussion}
+
+\subfile{chapters/ethics}
 
 \subfile{chapters/acknowledgements}
 
