--- a/thesis.bib
+++ b/thesis.bib
@@ -59,7 +59,7 @@
 }
 
 @article{rrt,
-    title={Rapidly-Exploring Random Trees A Цew Tool for Path Planning},
+    title={Rapidly-Exploring Random Trees A New Tool for Path Planning},
     author={LaValle, Steven M},
     year={1998}
 }
