--- a/thesis.tex
+++ b/thesis.tex
@@ -6,7 +6,7 @@
 
 \usepackage{geometry}
 
- \geometry{
+\geometry{
  a4paper,
  total={210mm,297mm},
  left=25mm,
@@ -20,6 +20,8 @@
 \setlength{\parskip}{1em}
 
 \usepackage{amsmath, amssymb}
+
+\usepackage{url}
 
 \usepackage[pdftex]{graphicx}
 
