--- a/thesis.bib
+++ b/thesis.bib
@@ -111,3 +111,60 @@
   year={2014},
   organization={IEEE}
 }
+
+@Article{matplotlib,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing In Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python
+  for application development, interactive scripting, and
+  publication-quality image generation across user
+  interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  year      = 2007
+}
+
+@inproceedings{ros,
+  title={ROS: an open-source Robot Operating System},
+  author={Quigley, Morgan and Conley, Ken and Gerkey, Brian and Faust, Josh and Foote, Tully and Leibs, Jeremy and Wheeler, Rob and Ng, Andrew Y},
+  booktitle={ICRA workshop on open source software},
+  volume={3},
+  number={3.2},
+  pages={5},
+  year={2009}
+}
+
+@misc{dodger,
+    title = {Dodger: Path Planning in Stochastic Dynamic Environments in C++},
+    author = {Wallar, Alex},
+    year = {2015},
+    howpublished = {\url{https://github.com/wallarelvo/Dodger}}
+}
+
+@misc{racer,
+    title = {Racer: Path Planning in Stochastic Dynamic Environments in Python},
+    author = {Wallar, Alex},
+    year = {2015},
+    howpublished = {\url{https://github.com/wallarelvo/racer}}
+}
+
+@inproceedings{sipp,
+  title={Sipp: Safe interval path planning for dynamic environments},
+  author={Phillips, Mike and Likhachev, Maxim},
+  booktitle={Robotics and Automation (ICRA), 2011 IEEE International Conference on},
+  pages={5628--5635},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{asipp,
+  title={Anytime safe interval path planning for dynamic environments},
+  author={Narayanan, Venkatraman and Phillips, Mike and Likhachev, Maxim},
+  booktitle={Intelligent Robots and Systems (IROS), 2012 IEEE/RSJ International Conference on},
+  pages={4708--4715},
+  year={2012},
+  organization={IEEE}
+}
