--- a/formal/title.tex
+++ b/formal/title.tex
@@ -5,7 +5,8 @@
 
 % Title
 \HRule \\[0.4cm]
-{\huge \bfseries Generating Safe Trajectories in Stochastic Dynamic Enviroments
+{\huge \bfseries Generating Safe Trajectories in Stochastic Dynamic
+    Environments
 \\[0.4cm] }
 
 \HRule \\[3cm]
