--- a/thesis.bib
+++ b/thesis.bib
@@ -168,3 +168,19 @@
   year={2012},
   organization={IEEE}
 }
+
+@INPROCEEDINGS{stprm, 
+    author={Alankus, G. and Atay, N. and Chenyang Lu and Bayazit, O.B.}, 
+    booktitle={Intelligent Robots and Systems, 2005. (IROS 2005). 2005 IEEE/RSJ International Conference on}, 
+    title={Spatiotemporal query strategies for navigation in dynamic sensor network environments}, 
+    year={2005}, 
+    month={Aug}, 
+    pages={3718-3725},
+}
+
+@misc{skynet,
+    title = {{Skynet: 5 Things You Didn't Know}},
+    author = {McKee, Ryan},
+    howpublished = {\url{http://uk.askmen.com/entertainment/special_feature_300/339_skynet-5-things-you-didnt-know.html}}
+}
+
