--- a/thesis.tex
+++ b/thesis.tex
@@ -60,6 +60,8 @@
 \newcommand{\True}{\Constant{true}}
 \newcommand{\Null}{\Constant{null}}
 
+\newcommand{\dif}{\ensuremath{{\mathrm{d}}}}
+
 \newcommand{\Name}{\Acronym{Dodger}}
 
 \newcommand{\Revision}[1]{\textcolor{red}{#1}}
@@ -71,8 +73,9 @@
 \newcommand{\argmin}[1]{\underset{#1}{\operatorname{arg}\,\operatorname{min}}\;}
 \newcommand{\argmax}[1]{\underset{#1}{\operatorname{arg}\,\operatorname{max}}\;}
 
-
 \newcommand{\mychange}[1]{\textcolor{red}{#1}}
+
+\newtheorem{theorem}{Theorem}
 
 \pagestyle{fancy}
 
