--- a/thesis.bib
+++ b/thesis.bib
@@ -184,3 +184,18 @@
     howpublished = {\url{http://uk.askmen.com/entertainment/special_feature_300/339_skynet-5-things-you-didnt-know.html}}
 }
 
+@incollection{weir,
+    year={2006},
+    isbn={978-3-540-38608-7},
+    booktitle={From Animals to Animats 9},
+    volume={4095},
+    series={Lecture Notes in Computer Science},
+    editor={Nolfi, Stefano and Baldassarre, Gianluca and Calabretta, Raffaele and Hallam, JohnC.T. and Marocco, Davide and Meyer, Jean-Arcady and Miglino, Orazio and Parisi, Domenico},
+    doi={10.1007/11840541_20},
+    title={POTBUG: A Mind’s Eye Approach to Providing BUG-Like Guarantees for Adaptive Obstacle Navigation Using Dynamic Potential Fields},
+    url={http://dx.doi.org/10.1007/11840541_20},
+    publisher={Springer Berlin Heidelberg},
+    author={Weir, Michael and Buck, Anthony and Lewis, Jon},
+    pages={239-250},
+    language={English}
+}
