--- a/thesis.bib
+++ b/thesis.bib
@@ -169,12 +169,12 @@
   organization={IEEE}
 }
 
-@INPROCEEDINGS{stprm, 
-    author={Alankus, G. and Atay, N. and Chenyang Lu and Bayazit, O.B.}, 
-    booktitle={Intelligent Robots and Systems, 2005. (IROS 2005). 2005 IEEE/RSJ International Conference on}, 
-    title={Spatiotemporal query strategies for navigation in dynamic sensor network environments}, 
-    year={2005}, 
-    month={Aug}, 
+@INPROCEEDINGS{stprm,
+    author={Alankus, G. and Atay, N. and Chenyang Lu and Bayazit, O.B.},
+    booktitle={Intelligent Robots and Systems, 2005. (IROS 2005). 2005 IEEE/RSJ International Conference on},
+    title={Spatiotemporal query strategies for navigation in dynamic sensor network environments},
+    year={2005},
+    month={Aug},
     pages={3718-3725},
 }
 
@@ -199,3 +199,45 @@
     pages={239-250},
     language={English}
 }
+
+@INPROCEEDINGS{rus,
+    author={Sung, C. and Feldman, D. and Rus, D.},
+    booktitle={Intelligent Robots and Systems (IROS), 2012 IEEE/RSJ International Conference on},
+    title={Trajectory clustering for motion prediction},
+    year={2012},
+    month={Oct},
+    pages={1547-1552},
+    doi={10.1109/IROS.2012.6386017},
+    ISSN={2153-0858}}
+
+@article{cmu,
+    title={Learning and Predicting Moving Object Trajectory: a piecewise trajectory segment approach},
+    author={Choi, Patrick Pakyan and Hebert, Martial},
+    journal={Robotics Institute},
+    pages={337},
+    year={2006}
+}
+
+@article{boulder,
+    title={Mobility modeling, location tracking, and trajectory prediction in wireless ATM networks},
+    author={Liu, Tong and Bahl, Paramvir and Chlamtac, Imrich},
+    journal={Selected Areas in Communications, IEEE Journal on},
+    volume={16},
+    number={6},
+    pages={922--936},
+    year={1998},
+    publisher={IEEE}
+}
+
+@inproceedings{edi1,
+    title={Multiscale Topological Trajectory Classification with Persistent Homology},
+    author={Pokorny, Florian T and Hawasly, Majd and Ramamoorthy, Subramanian},
+    booktitle={Robotics: Science and Systems X},
+    year={2014}
+}
+
+@article{edi2,
+    author = {Pokorny, F.T and Hawasly, M and Ramamoorthy, S},
+    title = {Topological trajectory classification with filtrations of simplicial complexes and persistent homology},
+    journal = {International Journal of Robotics Research},
+    year = {2015}}
