--- a/thesis.bib
+++ b/thesis.bib
@@ -241,3 +241,37 @@
     title = {Topological trajectory classification with filtrations of simplicial complexes and persistent homology},
     journal = {International Journal of Robotics Research},
     year = {2015}}
+
+@book{lavalle,
+    title={Planning algorithms},
+    author={LaValle, Steven M},
+    year={2006},
+    publisher={Cambridge university press}
+}
+
+@book{choset,
+    title={Principles of robot motion: theory, algorithms, and implementation},
+    author={Choset, Howie M},
+    year={2005},
+    publisher={MIT press}}
+
+@article{vis,
+    author = {Lozano-P{\'e}rez, Tom\'{a}s and Wesley, Michael A.},
+    title = {An Algorithm for Planning Collision-free Paths Among Polyhedral Obstacles},
+    journal = {Commun. ACM},
+    issue_date = {Oct. 1979},
+    volume = {22},
+    number = {10},
+    month = oct,
+    year = {1979},
+    issn = {0001-0782},
+    pages = {560--570},
+    numpages = {11},
+    url = {http://doi.acm.org/10.1145/359156.359164},
+    doi = {10.1145/359156.359164},
+    acmid = {359164},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {collision-free paths, graph searching, growing objects, path finding, polyhedral objects, polyhedral obstacles},
+} 
+
