--- a/formal/title.tex
+++ b/formal/title.tex
@@ -6,7 +6,7 @@
 % Title
 \HRule \\[0.4cm]
 {\huge \bfseries Generating Safe Trajectories in Stochastic Dynamic
-    Environments
+    Environments by Leveraging Information About Obstacle Trajectories
 \\[0.4cm] }
 
 \HRule \\[3cm]
