--- a/thesis.bib
+++ b/thesis.bib
@@ -275,3 +275,13 @@
     keywords = {collision-free paths, graph searching, growing objects, path finding, polyhedral objects, polyhedral obstacles},
 } 
 
+@article{manifesto,
+    title={The agile manifesto},
+    author={Fowler, Martin and Highsmith, Jim},
+    journal={Software Development},
+    volume={9},
+    number={8},
+    pages={28--35},
+    year={2001},
+    publisher={[San Francisco, CA: Miller Freeman, Inc., 1993-}
+}
