--- a/thesis.bib
+++ b/thesis.bib
@@ -151,6 +151,13 @@
     howpublished = {\url{https://github.com/wallarelvo/racer}}
 }
 
+@misc{keeper,
+    title = {Keeper: Using methods of nonlinear regression for position prediction of moving objects},
+    author = {Wallar, Alex},
+    year = {2015},
+    howpublished = {\url{https://github.com/wallarelvo/keeper}}
+}
+
 @inproceedings{sipp,
   title={Sipp: Safe interval path planning for dynamic environments},
   author={Phillips, Mike and Likhachev, Maxim},
@@ -284,4 +291,107 @@
     pages={28--35},
     year={2001},
     publisher={[San Francisco, CA: Miller Freeman, Inc., 1993-}
+}
+
+@incollection{smierzchalski2005path,
+  title={Path planning in dynamic environments},
+  author={Smierzchalski, Roman and Michalewicz, Zbigniew},
+  booktitle={Innovations in Robot Mobility and Control},
+  pages={135--153},
+  year={2005},
+  publisher={Springer}
+}
+
+@inproceedings{wang2007mobile,
+  title={Mobile robot path planning in dynamic environments},
+  author={Wang, Yang and Sillitoe, Ian PW and Mulvaney, David J},
+  booktitle={Robotics and Automation, 2007 IEEE International Conference on},
+  pages={71--76},
+  year={2007},
+  organization={IEEE}
+}
+
+@inproceedings{jensen2003motion,
+  title={Motion detection and path planning in dynamic environments},
+  author={Jensen, Bj{\"o}rn and Philippsen, Roland and Siegwart, Roland},
+  booktitle={Workshop Proceedings Reasoning with Uncertainty in Robotics, International Joint Conference on Artificial Intelligence (IJCAI)},
+  year={2003}
+}
+
+@inproceedings{dunwei2011local,
+  title={Local robot path planning with predicting band trajectories of obstacles},
+  author={Dunwei, Gong and Na, Geng},
+  booktitle={Natural Computation (ICNC), 2011 Seventh International Conference on},
+  volume={3},
+  pages={1734--1738},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{van2006anytime,
+  title={Anytime path planning and replanning in dynamic environments},
+  author={Van Den Berg, Jur and Ferguson, Dave and Kuffner, James},
+  booktitle={Robotics and Automation, 2006. ICRA 2006. Proceedings 2006 IEEE International Conference on},
+  pages={2366--2371},
+  year={2006},
+  organization={IEEE}
+}
+
+@article{aoude2013probabilistically,
+  title={Probabilistically safe motion planning to avoid dynamic obstacles with uncertain motion patterns},
+  author={Aoude, Georges S and Luders, Brandon D and Joseph, Joshua M and Roy, Nicholas and How, Jonathan P},
+  journal={Autonomous Robots},
+  volume={35},
+  number={1},
+  pages={51--76},
+  year={2013},
+  publisher={Springer}
+}
+
+@inproceedings{benton2011enhancing,
+  title={Enhancing Search for Satisficing Temporal Planning with Objective-driven Decisions},
+  author={Benton, J and Eyerich, Patrick and Kambhampati, Subbarao},
+  booktitle={HDIP 2011 3rd Workshop on Heuristics for Domain-independent Planning},
+  pages={59},
+  year={2011}
+}
+
+@article{hsu2002randomized,
+  title={Randomized kinodynamic motion planning with moving obstacles},
+  author={Hsu, David and Kindel, Robert and Latombe, Jean-Claude and Rock, Stephen},
+  journal={The International Journal of Robotics Research},
+  volume={21},
+  number={3},
+  pages={233--255},
+  year={2002},
+  publisher={SAGE Publications}
+}
+
+@inproceedings{rodriguez2007framework,
+  title={A framework for planning motion in environments with moving obstacles},
+  author={Rodriguez, Samuel and Lien, Jyh-Ming and Amato, Nancy M},
+  booktitle={Intelligent Robots and Systems, 2007. IROS 2007. IEEE/RSJ International Conference on},
+  pages={3309--3314},
+  year={2007},
+  organization={IEEE}
+}
+
+@article{lumelsky1987path,
+  title={Path-planning strategies for a point mobile automaton moving amidst unknown obstacles of arbitrary shape},
+  author={Lumelsky, Vladimir J and Stepanov, Alexander A},
+  journal={Algorithmica},
+  volume={2},
+  number={1-4},
+  pages={403--430},
+  year={1987},
+  publisher={Springer}
+}
+
+@incollection{van2010path,
+  title={Path planning among movable obstacles: a probabilistically complete approach},
+  author={Van Den Berg, Jur and Stilman, Mike and Kuffner, James and Lin, Ming and Manocha, Dinesh},
+  booktitle={Algorithmic Foundation of Robotics VIII},
+  pages={599--614},
+  year={2010},
+  publisher={Springer}
 }
