--- a/thesis.bib
+++ b/thesis.bib
@@ -395,3 +395,55 @@
   year={2010},
   publisher={Springer}
 }
+
+@inproceedings{koenig2002d,
+  title={D* Lite.},
+  author={Koenig, Sven and Likhachev, Maxim},
+  booktitle={AAAI/IAAI},
+  pages={476--483},
+  year={2002}
+}
+
+@inproceedings{likhachev2003ara,
+  title={ARA*: Anytime A* with provable bounds on sub-optimality},
+  author={Likhachev, Maxim and Gordon, Geoffrey J and Thrun, Sebastian},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={None},
+  year={2003}
+}
+
+@incollection{kennedy2010particle,
+  title={Particle swarm optimization},
+  author={Kennedy, James},
+  booktitle={Encyclopedia of Machine Learning},
+  pages={760--766},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{galletly1992overview,
+  title={An overview of genetic algorithms},
+  author={Galletly, John E},
+  journal={Kybernetes},
+  volume={21},
+  number={6},
+  pages={26--30},
+  year={1992},
+  publisher={MCB UP Ltd}
+}
+
+@article{evosurvey,
+    title = "Multiobjective evolutionary algorithms: A survey of the state of the art ",
+    journal = "Swarm and Evolutionary Computation ",
+    volume = "1",
+    number = "1",
+    pages = "32 - 49",
+    year = "2011",
+    author = "Aimin Zhou and Bo-Yang Qu and Hui Li and Shi-Zheng Zhao and Ponnuthurai Nagaratnam Suganthan and Qingfu Zhang",
+    keywords = "Multiobjective optimization",
+    keywords = "Evolutionary multiobjective optimization",
+    keywords = "Multiobjective evolutionary algorithms",
+    keywords = "Multicriteria decision making "
+}
+
+
