--- a/formal/declaration.tex
+++ b/formal/declaration.tex
@@ -1,6 +1,8 @@
 
 \begin{document}
 
+\chapter*{Declaration}
+
 I declare that the material submitted for assessment is my own work except
 where credit is explicitly given to others by citation or acknowledgement. This
 work was performed during the current academic year except where otherwise
