--- a/thesis.tex
+++ b/thesis.tex
@@ -109,9 +109,13 @@
 
 \pagebreak
 
+\subfile{chapters/acknowledgements}
+
 \tableofcontents
 
 \listoffigures
+
+\subfile{chapters/notation}
 
 \subfile{chapters/introduction}
 
@@ -134,8 +138,6 @@
 \subfile{chapters/discussion}
 
 \subfile{chapters/ethics}
-
-\subfile{chapters/acknowledgements}
 
 \subfile{chapters/appendix}
 
