--- a/thesis.tex
+++ b/thesis.tex
@@ -119,7 +119,7 @@
 
 \subfile{chapters/contextsurvey}
 
-\subfile{chapters/software}
+% \subfile{chapters/software}
 
 \subfile{chapters/objectives}
 
